# auto-batching-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: api.rs  batcher.rs  error.rs  main.rs
