[package]
name = "auto-batching-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.45", features = ["derive"] }
thiserror = "2.0.14"
bytes = "1.10.1"
